re2c/re2c/bootstrap/src/conf/parse_opts.cc
/* Generated by re2c 1.1.1 on Thu Aug 30 23:14:50 2018 */
#line 1 "../src/conf/parse_opts.re"
#include "src/code/input_api.h"
#include "src/conf/msg.h"
#include "src/conf/opt.h"
#include "src/re/empty_class_policy.h"
#include "src/re/encoding/enc.h"

namespace re2c
{

static inline bool next (char * & arg, char ** & argv)
{
    arg = *++argv;
    return arg != NULL;
}

parse_opts_t parse_opts(char **argv, conopt_t &globopts, Opt &opts, Warn &warn)
{
#define YYCTYPE unsigned char
    char * YYCURSOR;
    char * YYMARKER;
    Warn::option_t option;

#line 29 "../src/conf/parse_opts.re"


opt:
    if (!next (YYCURSOR, argv))
    {
        goto end;
    }

#line 35 "src/conf/parse_opts.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
	};
	yych = (YYCTYPE)*YYCURSOR;
	if (yych <= 0x00) goto yy2;
	if (yych == '-') goto yy6;
	goto yy4;
yy2:
	++YYCURSOR;
#line 38 "../src/conf/parse_opts.re"
	{
        error ("bad option: %s", *argv);
        return EXIT_FAIL;
    }
#line 84 "src/conf/parse_opts.cc"
yy4:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yybm[0+yych] & 128) {
		goto yy4;
	}
	goto yy8;
yy6:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= '-') {
		if (yych <= 0x00) goto yy10;
		if (yych >= '-') goto yy12;
	} else {
		if (yych == 'W') goto yy14;
	}
#line 61 "../src/conf/parse_opts.re"
	{ goto opt_short; }
#line 101 "src/conf/parse_opts.cc"
yy8:
	++YYCURSOR;
#line 59 "../src/conf/parse_opts.re"
	{ if (!opts.source (*argv))     return EXIT_FAIL; goto opt; }
#line 106 "src/conf/parse_opts.cc"
yy10:
	++YYCURSOR;
#line 58 "../src/conf/parse_opts.re"
	{ if (!opts.source ("<stdin>")) return EXIT_FAIL; goto opt; }
#line 111 "src/conf/parse_opts.cc"
yy12:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy16;
#line 62 "../src/conf/parse_opts.re"
	{ goto opt_long; }
#line 117 "src/conf/parse_opts.cc"
yy14:
	yyaccept = 0;
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych <= 'e') {
		if (yych <= 0x00) goto yy18;
		if (yych >= 'e') goto yy20;
	} else {
		if (yych == 'n') goto yy22;
	}
yy15:
#line 66 "../src/conf/parse_opts.re"
	{ option = Warn::W;        goto opt_warn; }
#line 130 "src/conf/parse_opts.cc"
yy16:
	++YYCURSOR;
#line 44 "../src/conf/parse_opts.re"
	{
        // all remaining arguments are non-options
        // so they must be input files
        // re2c expects exactly one input file
        for (char * f; next (f, argv);)
        {
            if (!opts.source (f))
            {
                return EXIT_FAIL;
            }
        }
        goto end;
    }
#line 147 "src/conf/parse_opts.cc"
yy18:
	++YYCURSOR;
#line 64 "../src/conf/parse_opts.re"
	{ warn.set_all ();       goto opt; }
#line 152 "src/conf/parse_opts.cc"
yy20:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy23;
yy21:
	YYCURSOR = YYMARKER;
	if (yyaccept == 0) {
		goto yy15;
	} else {
		goto yy27;
	}
yy22:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy24;
	goto yy21;
yy23:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy25;
	goto yy21;
yy24:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy26;
	goto yy21;
yy25:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy28;
	goto yy21;
yy26:
	yyaccept = 1;
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'e') goto yy29;
yy27:
#line 67 "../src/conf/parse_opts.re"
	{ option = Warn::WNO;      goto opt_warn; }
#line 186 "src/conf/parse_opts.cc"
yy28:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy30;
	goto yy21;
yy29:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy31;
	goto yy21;
yy30:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy32;
	if (yych == '-') goto yy34;
	goto yy21;
yy31:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy36;
	goto yy21;
yy32:
	++YYCURSOR;
#line 65 "../src/conf/parse_opts.re"
	{ warn.set_all_error (); goto opt; }
#line 208 "src/conf/parse_opts.cc"
yy34:
	++YYCURSOR;
#line 68 "../src/conf/parse_opts.re"
	{ option = Warn::WERROR;   goto opt_warn; }
#line 213 "src/conf/parse_opts.cc"
yy36:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych != 'o') goto yy21;
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych != 'r') goto yy21;
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych != '-') goto yy21;
	++YYCURSOR;
#line 69 "../src/conf/parse_opts.re"
	{ option = Warn::WNOERROR; goto opt_warn; }
#line 224 "src/conf/parse_opts.cc"
}
#line 70 "../src/conf/parse_opts.re"


opt_warn:

#line 231 "src/conf/parse_opts.cc"
{
	YYCTYPE yych;
	yych = (YYCTYPE)*YYCURSOR;
	switch (yych) {
	case 'c':	goto yy45;
	case 'e':	goto yy46;
	case 'm':	goto yy47;
	case 'n':	goto yy48;
	case 's':	goto yy49;
	case 'u':	goto yy50;
	default:	goto yy43;
	}
yy43:
	++YYCURSOR;
yy44:
#line 75 "../src/conf/parse_opts.re"
	{
        error ("bad warning: %s", *argv);
        return EXIT_FAIL;
    }
#line 252 "src/conf/parse_opts.cc"
yy45:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'o') goto yy51;
	goto yy44;
yy46:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'm') goto yy53;
	goto yy44;
yy47:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'a') goto yy54;
	goto yy44;
yy48:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'o') goto yy55;
	goto yy44;
yy49:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'w') goto yy56;
	goto yy44;
yy50:
	yych = (YYCTYPE)*(YYMARKER = ++YYCURSOR);
	if (yych == 'n') goto yy57;
	if (yych == 's') goto yy58;
	goto yy44;
yy51:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy59;
yy52:
	YYCURSOR = YYMARKER;
	goto yy44;
yy53:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy60;
	goto yy52;
yy54:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy61;
	goto yy52;
yy55:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy62;
	goto yy52;
yy56:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy63;
	goto yy52;
yy57:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy64;
	if (yych == 'r') goto yy65;
	goto yy52;
yy58:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy66;
	goto yy52;
yy59:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy67;
	goto yy52;
yy60:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy68;
	goto yy52;
yy61:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy69;
	goto yy52;
yy62:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy70;
	goto yy52;
yy63:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy71;
	goto yy52;
yy64:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy72;
	goto yy52;
yy65:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy73;
	goto yy52;
yy66:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy74;
	goto yy52;
yy67:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy75;
	goto yy52;
yy68:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'y') goto yy76;
	goto yy52;
yy69:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'h') goto yy77;
	goto yy52;
yy70:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy78;
	goto yy52;
yy71:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy79;
	goto yy52;
yy72:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'f') goto yy80;
	goto yy52;
yy73:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy81;
	goto yy52;
yy74:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy82;
	goto yy52;
yy75:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy83;
	goto yy52;
yy76:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy84;
	goto yy52;
yy77:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy85;
	goto yy52;
yy78:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy86;
	goto yy52;
yy79:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy87;
	goto yy52;
yy80:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy88;
	goto yy52;
yy81:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy89;
	goto yy52;
yy82:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy90;
	goto yy52;
yy83:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy91;
	goto yy52;
yy84:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy92;
	goto yy52;
yy85:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy93;
	goto yy52;
yy86:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy94;
	goto yy52;
yy87:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy95;
	goto yy52;
yy88:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy96;
	goto yy52;
yy89:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'h') goto yy97;
	goto yy52;
yy90:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy98;
	goto yy52;
yy91:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy99;
	goto yy52;
yy92:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'h') goto yy100;
	goto yy52;
yy93:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'm') goto yy101;
	goto yy52;
yy94:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy102;
	goto yy52;
yy95:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy103;
	goto yy52;
yy96:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy104;
	goto yy52;
yy97:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy105;
	goto yy52;
yy98:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy106;
	goto yy52;
yy99:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy107;
	goto yy52;
yy100:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy108;
	goto yy52;
yy101:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy109;
	goto yy52;
yy102:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'm') goto yy110;
	goto yy52;
yy103:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy111;
	goto yy52;
yy104:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy112;
	goto yy52;
yy105:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'b') goto yy113;
	goto yy52;
yy106:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy114;
	goto yy52;
yy107:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy115;
	goto yy52;
yy108:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy116;
	goto yy52;
yy109:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy117;
	goto yy52;
yy110:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy118;
	goto yy52;
yy111:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy119;
	goto yy52;
yy112:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy120;
	goto yy52;
yy113:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy121;
	goto yy52;
yy114:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy122;
	goto yy52;
yy115:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy123;
	goto yy52;
yy116:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy124;
	goto yy52;
yy117:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'y') goto yy125;
	goto yy52;
yy118:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy126;
	goto yy52;
yy119:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy127;
	goto yy52;
yy120:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy128;
	goto yy52;
yy121:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy129;
	goto yy52;
yy122:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy130;
	goto yy52;
yy123:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy131;
	goto yy52;
yy124:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy132;
	goto yy52;
yy125:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy133;
	goto yy52;
yy126:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy134;
	goto yy52;
yy127:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'g') goto yy135;
	goto yy52;
yy128:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy136;
	goto yy52;
yy129:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy137;
	goto yy52;
yy130:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'a') goto yy138;
	goto yy52;
yy131:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'd') goto yy139;
	goto yy52;
yy132:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy140;
	goto yy52;
yy133:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy141;
	goto yy52;
yy134:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 's') goto yy142;
	goto yy52;
yy135:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy143;
	goto yy52;
yy136:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'n') goto yy144;
	goto yy52;
yy137:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy145;
	goto yy52;
yy138:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'p') goto yy146;
	goto yy52;
yy139:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy147;
	goto yy52;
yy140:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy148;
	goto yy52;
yy141:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy149;
	goto yy52;
yy142:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy150;
	goto yy52;
yy143:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy151;
	goto yy52;
yy144:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 't') goto yy153;
	goto yy52;
yy145:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'u') goto yy154;
	goto yy52;
yy146:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy155;
	goto yy52;
yy147:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy156;
	goto yy52;
yy148:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy157;
	goto yy52;
yy149:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy158;
	goto yy52;
yy150:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy159;
	goto yy52;
yy151:
	++YYCURSOR;
#line 83 "../src/conf/parse_opts.re"
	{ warn.set (Warn::SWAPPED_RANGE,            option); goto opt; }
#line 681 "src/conf/parse_opts.cc"
yy153:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'r') goto yy160;
	goto yy52;
yy154:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'l') goto yy161;
	goto yy52;
yy155:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy162;
	goto yy52;
yy156:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych <= 0x00) goto yy164;
	goto yy52;
yy157:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == '-') goto yy166;
	goto yy52;
yy158:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'i') goto yy167;
	goto yy52;
yy159:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy168;
	goto yy52;
yy160:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'o') goto yy169;
	goto yy52;
yy161:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'e') goto yy170;
	goto yy52;
yy162:
	++YYCURSOR;
#line 86 "../src/conf/parse_opts.re"
	{ warn.set (Warn::USELESS_ESCAPE,           option); goto opt; }
#line 722 "src/conf/parse_opts.cc"
yy164:
	++YYCURSOR;
#line 79 "../src/conf/parse_opts.re"
	{ warn.set (Warn::CONDITION_ORDER,          option); goto opt; }
#line 727 "src/conf/parse_opts.cc"
yy166:
	yych = (YYCTYPE)*++YYCURSOR;
	if (yych == 'c') goto yy171;
	goto yy52;
yy167:
